# trisa

./: WORKSPACE  go.mod  go.sum
api/: trisa_directory_service.yaml
cmd/trisa/app/cmd/: BUILD.bazel  curl.txt  server.go
dao/sqllite/: BUILD.bazel  database.go  keyList.go  kycList_test.go  txnList.go  txnList_test.go
model/sqlliteModel/: BUILD.bazel  kycList.go  txnList.go
pkg/trisa/config/: config.go
pkg/trisa/handler/: BUILD.bazel  demo.go
pkg/trisa/server/: server.go
proto/trisa/querykyc/v1alpha1/: BUILD.bazel  querykyc.proto
proto/trisa/querytxn/v1alpha1/: BUILD.bazel  querytxn.proto
proto/trisa/synctxn/v1alpha1/: BUILD.bazel  synctxn.proto
