load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "database.go",
        "keyList.go",
        "txnList.go",
    ],
    importpath = "github.com/trisacrypto/trisa/dao/sqllite",
    visibility = ["//visibility:public"],
    deps = [
            "//model/sqlliteModel:go_default_library",
            "@com_github_gorm_model//:go_default_library",
            "@com_github_jinzhu_sqlite//:go_default_library",
        ],
)
