load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "context.go",
        "demo.go",
    ],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/trisa/identity/be/v1alpha1:go_default_library",
        "//proto/trisa/protocol/v1alpha1:go_default_library",
        "//proto/trisa/querykyc/v1alpha1:go_default_library",
        "//proto/trisa/querytxn/v1alpha1:go_default_library",
        "//proto/trisa/synctxn/v1alpha1:go_default_library",
        "//dao/sqllite:go_default_library",
        "//model/sqlliteModel:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
    ],
)
